# alekhnovich-cryptosystem

./: .gitignore  README.md
code/: CMakeLists.txt
code/include/: alekhnovich.h  api.h  arrays.h  backend.h  bitop.h  seed.h  test.h  xoshiro.h
code/lib/: bitop.h  matrix.h  seed.h  xoshiro.h
code/src/: alekhnovich.c  api.c  arrays.c  backend.c  bitop.c  main.c  seed.c  test.c  xoshiro.c
report/: main.dvi  main.tex
report/latex/: bibliography.bib  main.tex
report/latex/sections/: alg.tex  fnc.tex  imp.tex  int.tex  my.tex  obv.tex  per.tex  the.tex
report/latex/sections/sec_imp/: decryption.tex  encryption.tex  key_gen.tex
report/sections/: future_developments.tex  implementation.tex  introduction.tex  theoretical_foundamental.tex
